base/monitoring/node-problem-detector/networkpolicies/prometheus-egress-node-problem-detector.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-node-problem-detector
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toServices:
        - k8sService:
            serviceName: node-problem-detector
            namespace: monitoring
      toPorts:
        - ports:
            - port: "20257"
              protocol: TCP
